Separated files into separate scripts. Added a seed based star generator. Stars appear as white boxes.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>StarBorn</title>
-    <script src="js/perlin.js" charset="utf-8"></script>
     <script src="js/game.js" charset="utf-8"></script>
+    <script src="js/game.load.js" charset="utf-8"></script>
+    <script src="js/game.config.js" charset="utf-8"></script>
     <script src="js/main.js" charset="utf-8"></script>
 
   </head>
