Cleaned up the index file.

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8">
     <title>StarBorn</title>
     <script src="js/game.js" charset="utf-8"></script>
-    <script src="js/game.load.js" charset="utf-8"></script>
     <script src="js/game.config.js" charset="utf-8"></script>
-    <script src="js/main.js" charset="utf-8"></script>
-
+    <script type="text/javascript">
+      /* global game */
+      game.init();
+    </script>
   </head>
   <body>
 
