--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>StarBorn</title>
+    <link rel="stylesheet" href="css/style.css" type="text/css" />
     <script src="js/game.js" charset="utf-8"></script>
     <script type="text/javascript">
       /* global game */
